# beast-agent

./: .gitignore  AGENT.md  IMPLEMENTATION_READINESS.md  LICENSE  README.md  RECOMMENDATION.md  SPEC_REVIEW_FINDINGS.md  V0.1.0_COMPLETION_SUMMARY.md  pyproject.toml  sonar-project.properties
.github/: SECRETS.md
.github/workflows/: lint.yml  publish.yml  sonarcloud.yml  test.yml
.kiro/: MCP_INITIALIZATION_PROMPT.md  README.md  config.yaml
.kiro/settings/rules/: requirements-writing-guide.md
.kiro/specs/: QUALITY_STANDARDS_TEMPLATE.md  SONARCLOUD_INTEGRATION_GUIDE.md  design.md  requirements.md  tasks.md
docs/: AGENT_DEVELOPMENT.md  API.md  DEPLOYMENT.md  INTEGRATION_WITH_MAILBOX_CORE.md  SONARCLOUD_AND_TESTING_GUIDE.md
examples/: authenticated_agent.py  discovery_example.py  live_fire_test_agent.py  simple_agent.py
prompts/: README.md
prompts/inbound/: 20251030_authentication_docs_gap.md  20251030_discovery_auth_bug.md  20251030_message_consumption_bug.md
prompts/outbound/: beast-agent-live-fire-bugs.md  beast-mailbox-core-env-var-support.md  using-beast-agent.md
prompts/processed/: 20250131_BEAST_AGENT_INTEGRATION_DOCS-FULFILLED.md  beast-mailbox-core-api-docs-request-FULFILLED.md  beast-mailbox-core-sonarcloud-integration-advice-FULFILLED.md
src/beast_agent/: __init__.py  base_agent.py  decorators.py  models.py  types.py
tests/: __init__.py  conftest.py  test_authenticated_connection.py  test_base_agent.py  test_base_agent_comprehensive.py  test_base_agent_config.py  test_base_agent_coverage.py  test_base_agent_edge_cases.py  test_base_agent_mailbox.py  test_base_agent_name_registration.py  test_decorators.py  test_discovery.py  test_mailbox_integration.py  test_models.py
